chat-api/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-service
spec:
  selector:
    app: chat-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
